@@ -7,7 +7,6 @@ package com.top_logic.util;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import com.top_logic.basic.Logger;
 import com.top_logic.basic.config.ConfigurationException;
@@ -19,7 +18,6 @@ import com.top_logic.basic.util.ComputationEx;
 import com.top_logic.knowledge.gui.layout.LayoutConfig;
 import com.top_logic.knowledge.service.KBBasedManagedClass;
 import com.top_logic.knowledge.service.Transaction;
-import com.top_logic.layout.structure.MediaQueryControl.Layout;
 import com.top_logic.mig.html.layout.LayoutComponent;
 import com.top_logic.mig.html.layout.LayoutStorage;
 import com.top_logic.mig.html.layout.LayoutUtils;
@@ -83,11 +81,10 @@ public class LayoutBasedSecurity extends KBBasedManagedClass<LayoutBasedSecurity
 	/**
 	 * Initialises the {@link PersBoundComp}s within a new {@link Transaction}.
 	 */
-	protected final List<LayoutComponent.Config> initPersBoundComps() {
+	protected final void initPersBoundComps() {
 		try (Transaction tx = kb().beginTransaction(I18NConstants.INITIALIZING_LAYOUT_BASED_SECURITY)) {
-			List<LayoutComponent.Config> result = initPersBoundComps(tx);
+			initPersBoundComps(tx);
 			tx.commit();
-			return result;
 		}
 	}
 
@@ -97,52 +94,30 @@ public class LayoutBasedSecurity extends KBBasedManagedClass<LayoutBasedSecurity
 	 * @param tx
 	 *        The current transaction.
 	 */
-	protected List<LayoutComponent.Config> initPersBoundComps(Transaction tx) {
+	protected void initPersBoundComps(Transaction tx) {
 		SecurityComponentCache.setupCache();
 
-		return LayoutConfig.getAvailableLayouts()
+		List<LayoutComponent.Config> layouts = LayoutConfig.getAvailableLayouts()
 			.stream()
-			.map(name -> this.initComponent(name))
+			.map(this::loadLayoutSafe)
 			.filter(Objects::nonNull)
-			.collect(Collectors.toList());
+			.toList();
+
+		int count = BoundMainLayout.initPersBoundComps(kb(), layouts);
+		if (count > 0) {
+			SecurityComponentCache.setupCache();
+			Logger.info("Created " + count + " objects.", LayoutBasedSecurity.class);
+		}
 	}
 
-	/**
-	 * Initialised the component with the given <code>layoutName</code>.
-	 * 
-	 * @param layoutName
-	 *        Identifier for the {@link Layout}
-	 */
-	protected LayoutComponent.Config initComponent(String layoutName) {
-		int existingSecurityComponentsBefore = SecurityComponentCache.getAllSecurityComponents().size();
 
-		LayoutComponent.Config layout;
+	private LayoutComponent.Config loadLayoutSafe(String layoutName) {
 		try {
-			layout = loadLayout(layoutName);
+			return loadLayout(layoutName);
 		} catch (ConfigurationException ex) {
 			Logger.error("Loading layout '" + layoutName + "' failed.", ex, LayoutBasedSecurity.class);
 			return null;
 		}
-
-		if (layout == null) {
-			// Error has already been reported.
-			return null;
-		}
-
-		int count = BoundMainLayout.initPersBoundComp(kb(), layout);
-		if (count > 0) {
-			SecurityComponentCache.setupCache();
-			Logger.info("Created " + count + " objects.", LayoutBasedSecurity.class);
-
-			boolean initialSetup = existingSecurityComponentsBefore == 0;
-			if (initialSetup) {
-				// Quirks: Initial setup.
-				return layout;
-			}
-		}
-
-		// Quirks: Not the initial setup.
-		return null;
 	}
 
 	private LayoutComponent.Config loadLayout(String layoutName) throws ConfigurationException {
